Configure user registration, set a redirect to a link with ToDo lists when authentication is successful (#1)
* Add password encoding when creating a user

* Implement GrantedAuthority for Role model

* Set a redirect to a link with ToDo lists when authentication is successful

* Add gitignore