@@ -2,24 +2,30 @@ package com.softserve.itacademy.service.security;
 
 import com.softserve.itacademy.model.User;
 import org.springframework.security.core.GrantedAuthority;
-import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
-import java.util.Arrays;
 import java.util.Collection;
+import java.util.List;
 
 public class MyUserDetails implements UserDetails {
 
-    private User user;
+    private final User user;
 
     public MyUserDetails(User user) {
         this.user = user;
     }
 
+    public long getUserId() {
+        return user.getId();
+    }
+
+    public String getUserAuthority() {
+        return user.getRole().getAuthority();
+    }
+
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        SimpleGrantedAuthority authority = new SimpleGrantedAuthority(String.valueOf(user.getRole()));
-        return Arrays.asList(authority);
+        return List.of(user.getRole());
     }
 
     @Override
@@ -52,4 +58,3 @@ public class MyUserDetails implements UserDetails {
         return true;
     }
 }
-
